force-app/main/default/objects/OrderStatusChangeEvent__e/OrderStatusChangeEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event fired when an order status changes. Enables real-time notifications and event-driven architecture for order processing workflows.</description>
    <label>Order Status Change Event</label>
    <pluralLabel>Order Status Change Events</pluralLabel>
</CustomObject>