force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Changed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Changed_By_Name__c</fullName>
    <description>Name of the user who made the change</description>
    <label>Changed By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>