force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>ID of the customer associated with this order</description>
    <label>Customer ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>