force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of event: Status_Change, Order_Created, Order_Cancelled, etc.</description>
    <label>Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>