force-app/main/default/objects/OrderStatusChangeEvent__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>The new status after the change</description>
    <label>New Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>