force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>The unique ID of the order that changed</description>
    <label>Order ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>