force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>The order number for display purposes</description>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>