force-app/main/default/objects/OrderStatusChangeEvent__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>The status before the change</description>
    <label>Previous Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>